# mohu-fork-nirman

./: AGENTS.md  CLAUDE.md  Cargo.toml  deny.toml  flake.nix
.github/workflows/: ci.yml  pr-bot.yml
crates/mohu-array/: Cargo.toml
crates/mohu-buffer/examples/: alloc_and_pool.rs  buffer_basics.rs
crates/mohu-buffer/src/: alloc.rs  buffer.rs  layout.rs  lib.rs  ops.rs  pool.rs  strides.rs  view.rs
crates/mohu-buffer/tests/: integration.rs
crates/mohu-dtype/: Cargo.toml  README.md
crates/mohu-dtype/examples/: dtype_basics.rs  type_promotion.rs
crates/mohu-dtype/src/: cast.rs  compat.rs  dlpack.rs  dtype.rs  finfo.rs  iinfo.rs  lib.rs  macros.rs  promote.rs  scalar.rs
crates/mohu-error/src/: codes.rs  context.rs  error.rs  kind.rs  macros.rs  multi.rs  python.rs  reporter.rs  test_utils.rs
crates/mohu-fft/: Cargo.toml
crates/mohu-fft/src/: lib.rs
crates/mohu-index/: Cargo.toml
crates/mohu-index/src/: lib.rs
crates/mohu-io/: Cargo.toml
crates/mohu-masked/: Cargo.toml
crates/mohu-masked/src/: lib.rs
crates/mohu-ops/: Cargo.toml
crates/mohu-random/: Cargo.toml
crates/mohu-random/src/: generator.rs  lib.rs
crates/mohu-simd/: Cargo.toml
crates/mohu-simd/src/: lib.rs
crates/mohu-sparse/: Cargo.toml
crates/mohu-sparse/src/: lib.rs
crates/mohu-special/: Cargo.toml
crates/mohu-special/src/: lib.rs
crates/mohu-stats/: Cargo.toml
crates/mohu-testing/: Cargo.toml
crates/mohu-testing/src/: approx.rs  lib.rs
crates/mohu-ufunc/: Cargo.toml
crates/mohu-ufunc/src/: lib.rs
