[workspace]
members = [
    # ── Foundation layer (order = dependency depth) ──────────────────────────
    "crates/mohu-error",      # error types, codes, reporter
    "crates/mohu-dtype",      # DType enum, scalar traits, type promotion
    "crates/mohu-buffer",     # aligned allocation, layout, strides, DLPack
    "crates/mohu-array",      # N-dimensional array type
    "crates/mohu-core",       # re-export facade of the four above

    # ── Dispatch & protocol layer ─────────────────────────────────────────────
    "crates/mohu-simd",       # AVX2 / AVX-512 / NEON kernel primitives
    "crates/mohu-ufunc",      # universal-function protocol: broadcast, reduce, outer
    "crates/mohu-index",      # advanced indexing: fancy, boolean, take/put

    # ── Compute layer ─────────────────────────────────────────────────────────
    "crates/mohu-ops",        # element-wise ops, matmul, reductions
    "crates/mohu-fft",        # FFT / IFFT / RFFT / 2-D FFT
    "crates/mohu-random",     # PRNG (PCG64, Philox) + statistical distributions
    "crates/mohu-special",    # special math: erf, gamma, beta, Bessel, …
    "crates/mohu-stats",      # descriptive statistics, hypothesis tests

    # ── Data structure extensions ─────────────────────────────────────────────
    "crates/mohu-sparse",     # COO / CSR / CSC sparse matrix formats
    "crates/mohu-masked",     # masked arrays — null / invalid value propagation

    # ── I/O & interop ─────────────────────────────────────────────────────────
    "crates/mohu-io",         # .npy / .npz / CSV / HDF5 / Parquet

    # ── Developer tooling ─────────────────────────────────────────────────────
    "crates/mohu-testing",    # test fixtures, property tests, array comparison
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2024"
license      = "MIT"
authors      = ["mohu contributors"]
repository   = "https://github.com/mohu-org/mohu"
homepage     = "https://github.com/mohu-org/mohu"
keywords     = ["array", "ndarray", "numpy", "scientific", "python"]
categories   = ["science", "mathematics", "api-bindings"]

[workspace.dependencies]
# ── Internal crates — foundation ─────────────────────────────────────────────
mohu-error   = { path = "crates/mohu-error",   version = "0.1.0" }
mohu-dtype   = { path = "crates/mohu-dtype",   version = "0.1.0" }
mohu-buffer  = { path = "crates/mohu-buffer",  version = "0.1.0" }
mohu-array   = { path = "crates/mohu-array",   version = "0.1.0" }
mohu-core    = { path = "crates/mohu-core",    version = "0.1.0" }

# ── Internal crates — dispatch & protocol ────────────────────────────────────
mohu-simd    = { path = "crates/mohu-simd",    version = "0.1.0" }
mohu-ufunc   = { path = "crates/mohu-ufunc",   version = "0.1.0" }
mohu-index   = { path = "crates/mohu-index",   version = "0.1.0" }

# ── Internal crates — compute ────────────────────────────────────────────────
mohu-ops     = { path = "crates/mohu-ops",     version = "0.1.0" }
mohu-fft     = { path = "crates/mohu-fft",     version = "0.1.0" }
mohu-random  = { path = "crates/mohu-random",  version = "0.1.0" }
mohu-special = { path = "crates/mohu-special", version = "0.1.0" }
mohu-stats   = { path = "crates/mohu-stats",   version = "0.1.0" }

# ── Internal crates — data structures ────────────────────────────────────────
mohu-sparse  = { path = "crates/mohu-sparse",  version = "0.1.0" }
mohu-masked  = { path = "crates/mohu-masked",  version = "0.1.0" }

# ── Internal crates — I/O & tooling ──────────────────────────────────────────
mohu-io      = { path = "crates/mohu-io",      version = "0.1.0" }
mohu-testing = { path = "crates/mohu-testing", version = "0.1.0" }

# ── External mohu-org crates (separate repos) ─────────────────────────────────
mohu-compute = { git = "https://github.com/mohu-org/mohu-compute" }
mohu-linalg  = { git = "https://github.com/mohu-org/mohu-linalg" }

# ── Parallelism ───────────────────────────────────────────────────────────────
rayon        = "1.10"
libc         = "0.2"

# ── Numerics ──────────────────────────────────────────────────────────────────
half         = { version = "2.4", features = ["num-traits"] }
num-traits   = "0.2"
num-complex  = "0.4"
num-integer  = "0.1"

# ── FFT ───────────────────────────────────────────────────────────────────────
rustfft      = "6"

# ── PRNG ─────────────────────────────────────────────────────────────────────
rand         = { version = "0.9", features = ["small_rng"] }
rand_chacha  = "0.9"

# ── Sparse / linear algebra utilities ────────────────────────────────────────
sprs         = { version = "0.11", default-features = false }

# ── Arrow columnar memory ─────────────────────────────────────────────────────
arrow        = { version = "54", default-features = false, features = ["ffi"] }

# ── Error handling ────────────────────────────────────────────────────────────
thiserror    = "2"

# ── Serialization ─────────────────────────────────────────────────────────────
serde        = { version = "1", features = ["derive"] }

# ── I/O ───────────────────────────────────────────────────────────────────────
memmap2      = "0.9"

# ── Python bindings ───────────────────────────────────────────────────────────
pyo3         = { version = "0.28", features = ["extension-module"] }

# ── Collections ───────────────────────────────────────────────────────────────
smallvec     = { version = "1.13", features = ["union"] }
indexmap     = "2"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing      = "0.1"

# ── Testing ───────────────────────────────────────────────────────────────────
proptest     = "1"
approx       = "0.5"

# ── Build utilities ───────────────────────────────────────────────────────────
cfg-if       = "1"

# ----- Build profiles ─────────────────────────────────────────────────────────

[profile.release]
opt-level     = 3
lto           = "thin"
strip         = true
panic         = "abort"

[profile.dist-release]
inherits      = "release"
lto           = "fat"
codegen-units = 1
debug         = false

[profile.bench]
inherits      = "release"
strip         = false
debug         = true
