[package]
name        = "mohu-array"
description = "NdArray<T> — the core N-dimensional array type composing dtype, buffer, shape, and slice info"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
mohu-error.workspace  = true
mohu-dtype.workspace  = true
mohu-buffer.workspace = true
num-traits.workspace  = true
rayon.workspace       = true


[package.metadata.cargo-machete]
ignored = ["mohu-buffer", "mohu-dtype", "mohu-error", "num-traits", "rayon"]
