[package]
name        = "mohu-dtype"
description = "DType enum, scalar type traits, and type promotion rules for mohu"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true

[features]
serde = ["dep:serde"]
arrow = ["dep:arrow"]

[dependencies]
mohu-error.workspace  = true
num-traits.workspace  = true
num-complex.workspace = true
half.workspace        = true

[dependencies.serde]
version  = "1"
features = ["derive"]
optional = true

[dependencies.arrow]
workspace = true
optional  = true


[package.metadata.cargo-machete]
ignored = ["num-traits"]
