[package]
name        = "mohu-fft"
description = "FFT, IFFT, RFFT, and 2-D transforms for mohu arrays"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true

[features]
default = []
# Use the system FFTW3 library if available (much faster for large sizes).
fftw    = []

[dependencies]
mohu-error.workspace  = true
mohu-dtype.workspace  = true
mohu-buffer.workspace = true
rayon.workspace       = true
rustfft.workspace     = true
num-complex.workspace = true
num-traits.workspace  = true


[package.metadata.cargo-machete]
ignored = ["mohu-buffer", "mohu-dtype", "num-complex", "num-traits", "rayon", "rustfft"]
