[package]
name        = "mohu-random"
description = "PRNG engines and statistical distributions for mohu"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true

[features]
default = []
serde   = ["dep:serde", "dep:serde"]

[dependencies]
mohu-error.workspace  = true
mohu-dtype.workspace  = true
mohu-buffer.workspace = true
rayon.workspace       = true
rand.workspace        = true
rand_chacha.workspace = true
num-traits.workspace  = true
num-complex.workspace = true

[dependencies.serde]
workspace = true
optional  = true


[package.metadata.cargo-machete]
ignored = ["mohu-buffer", "mohu-dtype", "num-complex", "num-traits", "rand", "rand_chacha", "rayon", "serde"]
