[package]
name        = "mohu-simd"
description = "AVX2 / AVX-512 / NEON SIMD kernel primitives for mohu"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true

[features]
default   = []
avx2      = []          # x86-64 AVX2 (256-bit)
avx512    = ["avx2"]    # x86-64 AVX-512 (512-bit) — superset of AVX2
neon      = []          # AArch64 NEON / Advanced SIMD
# runtime CPU detection: automatically picks the best available ISA
runtime-dispatch = []

[dependencies]
mohu-error.workspace  = true
mohu-dtype.workspace  = true
cfg-if.workspace      = true

[build-dependencies]


[package.metadata.cargo-machete]
ignored = ["cfg-if", "mohu-dtype"]
