[package]
name        = "mohu-sparse"
description = "COO / CSR / CSC sparse matrix formats and operations for mohu"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true

[features]
default = []
serde   = ["dep:serde"]

[dependencies]
mohu-error.workspace  = true
mohu-dtype.workspace  = true
mohu-buffer.workspace = true
rayon.workspace       = true
num-traits.workspace  = true
num-complex.workspace = true
smallvec.workspace    = true
indexmap.workspace    = true

[dependencies.serde]
workspace = true
optional  = true


[package.metadata.cargo-machete]
ignored = ["indexmap", "mohu-buffer", "mohu-dtype", "num-complex", "num-traits", "rayon", "serde", "smallvec"]
