[package]
name        = "mohu-special"
description = "Special mathematical functions for mohu: erf, gamma, beta, Bessel, …"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
mohu-error.workspace  = true
mohu-dtype.workspace  = true
mohu-buffer.workspace = true
rayon.workspace       = true
num-traits.workspace  = true


[package.metadata.cargo-machete]
ignored = ["mohu-buffer", "mohu-dtype", "num-traits", "rayon"]
