[package]
name        = "mohu-stats"
description = "Statistical functions: descriptive stats, distributions, random sampling, and hypothesis testing"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
mohu-core.workspace   = true
mohu-ops.workspace    = true
num-traits.workspace  = true
rayon.workspace       = true
thiserror.workspace   = true


[package.metadata.cargo-machete]
ignored = ["mohu-core", "mohu-ops", "num-traits", "rayon", "thiserror"]
