[package]
name        = "mohu-testing"
description = "Test utilities, fixtures, and property-test helpers for mohu"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
mohu-error.workspace  = true
mohu-dtype.workspace  = true
mohu-buffer.workspace = true
approx.workspace      = true
proptest.workspace    = true


[package.metadata.cargo-machete]
ignored = ["mohu-buffer", "mohu-dtype"]
