[package]
name        = "mohu-ufunc"
description = "Universal-function protocol for mohu: broadcast, reduce, accumulate, outer"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
mohu-error.workspace  = true
mohu-dtype.workspace  = true
mohu-buffer.workspace = true
rayon.workspace       = true
smallvec.workspace    = true


[package.metadata.cargo-machete]
ignored = ["mohu-buffer", "mohu-dtype", "rayon", "smallvec"]
